--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,7 @@
     "device-manager": { "tags": [] },
     "sensor-connector": { "tags": [] },
     "logger": { "tags": [] },
+    "alexa-connector": { "tags": [] },
     "ota-server": { "tags": [] },
     "api-shared-data-access-models": { "tags": [] }
   }
