--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose -f docker-compose.dev.yml up -d",
     "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
-    "docker:publish:all:prod": "npm run docker:messenger-connector:publish:prod && npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:logger:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:sensor-connector:publish:prod && npm run docker:api-gateway:publish:prod && npm run docker:mongodb:publish",
+    "docker:publish:all:prod": "npm run docker:messenger-connector:publish:prod && npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:logger:publish:prod && npm run docker:esp-update-server:publish:prod && npm run docker:ota-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:sensor-connector:publish:prod && npm run docker:api-gateway:publish:prod && npm run docker:mongodb:publish",
     "########### mongodb ###########": "############################################################################################################",
     "docker:mongodb:build-for-armv7": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mongodb:latest -f ./mongodb/Dockerfile .",
     "docker:mongodb:push-to-reg": "docker push 192.168.178.28:5000/mongodb:latest",
@@ -92,6 +92,17 @@
     "docker:esp-update-server:push-to-reg": "docker push 192.168.178.28:5000/esp-update-server:latest",
     "docker:esp-update-server:publish:dev": "npm run docker:esp-update-server:build-for-armv7:dev && npm run docker:esp-update-server:push-to-reg",
     "docker:esp-update-server:publish:prod": "npm run docker:esp-update-server:build-for-armv7:prod && npm run docker:esp-update-server:push-to-reg",
+    "########### ota-server ###########": "############################################################################################################",
+    "start:ota-server": "nx serve ota-server",
+    "build:ota-server": "nx build ota-server",
+    "test:ota-server": "nx test ota-server",
+    "docker:ota-server": "docker build -t ota-server -f apps/ota-server/Dockerfile .",
+    "ncc:ota-server": "ncc build dist/apps/ota-server/main.js -m -C -o dist/apps/ota-server/vendor",
+    "docker:ota-server:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/ota-server:latest -f ./apps/ota-server/Dockerfile .",
+    "docker:ota-server:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/ota-server:latest -f ./apps/ota-server/Dockerfile .",
+    "docker:ota-server:push-to-reg": "docker push 192.168.178.28:5000/ota-server:latest",
+    "docker:ota-server:publish:dev": "npm run docker:ota-server:build-for-armv7:dev && npm run docker:ota-server:push-to-reg",
+    "docker:ota-server:publish:prod": "npm run docker:ota-server:build-for-armv7:prod && npm run docker:ota-server:push-to-reg",
     "########### alexa-connector ###########": "############################################################################################################",
     "start:alexa-connector": "npm run create-env:alexa-connector && nx serve alexa-connector",
     "build:alexa-connector": "npm run create-env:alexa-connector && nx build alexa-connector",
@@ -160,7 +171,9 @@
     "@nestjs/mapped-types": "^0.4.0",
     "@nestjs/microservices": "^7.6.14",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.15",
     "@ngrx/component-store": "11.0.0",
     "@nrwl/angular": "11.3.1",
     "@types/node": "12.12.38",
