--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,6 +132,16 @@ services:
       - /data/db:/data/db
       - /data/configdb:/data/configdb
 
+  influxdb:
+    image: 'arm32v7/influxdb:1.8.4'
+    container_name: influxdb
+    restart: always
+    ports:
+      - 8086:8086
+    volumes:
+      # - influxdb-storage:/var/lib/influx.db
+      - /data/influxdb:/var/lib/influx.db
+
   portainer:
     image: portainer/portainer
     container_name: portainer
@@ -161,3 +171,4 @@ volumes:
   portainer_data:
   # db:
   # configdb:
+  # influxdb-storage:
