--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     "express-jwt": "^6.0.0",
     "fs-extra": "^9.0.1",
     "http-proxy-middleware": "^1.0.6",
+    "influx": "^5.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.5",
     "ngx-mqtt": "8.0.1",
