--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,7 +133,7 @@ services:
       - /data/configdb:/data/configdb
 
   influxdb:
-    image: 'arm32v7/influxdb:1.8.4'
+    image: arm32v7/influxdb:1.8.4
     container_name: influxdb
     restart: always
     ports:
