--- a/package.json
+++ b/package.json
@@ -11,87 +11,48 @@
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose -f docker-compose.dev.yml up -d",
     "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
-    "docker:publish:all:prod": "npm run docker:messenger-connector:publish:prod && npm run docker:mqtt-client:publish:prod && npm run docker:mqtt-broker:publish:prod && npm run docker:logger:publish:prod && npm run docker:ota-server:publish:prod && npm run docker:alexa-connector:publish:prod && npm run docker:adesso-commuter-server:publish:prod && npm run docker:device-manager:publish:prod && npm run docker:sensor-connector:publish:prod && npm run docker:api-gateway:publish:prod && npm run docker:mongodb:publish",
-    "########### mongodb ###########": "############################################################################################################",
-    "docker:mongodb:build-for-armv7": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mongodb:latest -f ./mongodb/Dockerfile .",
-    "docker:mongodb:push-to-reg": "docker push 192.168.178.28:5000/mongodb:latest",
-    "docker:mongodb:publish": "npm run docker:mongodb:build-for-armv7 && npm run docker:mongodb:push-to-reg",
+    "docker:publish:all:prod": "./docker-build.sh --prod --publish --all -r 192.168.178.28:5000",
     "########### messenger-connector ###########": "############################################################################################################",
     "start:messenger-connector": "nx serve messenger-connector",
     "build:messenger-connector": "nx build messenger-connector",
     "test:messenger-connector": "nx test messenger-connector",
     "docker:messenger-connector": "docker build -t messenger-connector -f apps/messenger-connector/Dockerfile .",
     "ncc:messenger-connector": "ncc build dist/apps/messenger-connector/main.js -m -C -o dist/apps/messenger-connector/vendor",
-    "docker:messenger-connector:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/messenger-connector:latest -f ./apps/messenger-connector/Dockerfile .",
-    "docker:messenger-connector:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/messenger-connector:latest -f ./apps/messenger-connector/Dockerfile .",
-    "docker:messenger-connector:push-to-reg": "docker push 192.168.178.28:5000/messenger-connector:latest",
-    "docker:messenger-connector:publish:dev": "npm run docker:messenger-connector:build-for-armv7:dev && npm run docker:messenger-connector:push-to-reg",
-    "docker:messenger-connector:publish:prod": "npm run docker:messenger-connector:build-for-armv7:prod && npm run docker:messenger-connector:push-to-reg",
     "########### mqtt-client ###########": "############################################################################################################",
     "start:mqtt-client": "nx serve mqtt-client",
     "build:mqtt-client": "nx build mqtt-client",
     "test:mqtt-client": "nx test mqtt-client",
     "docker:mqtt-client": "docker build -t mqtt-client -f apps/mqtt-client/Dockerfile .",
-    "docker:mqtt-client:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-client:latest -f ./apps/mqtt-client/Dockerfile .",
-    "docker:mqtt-client:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-client:latest -f ./apps/mqtt-client/Dockerfile .",
-    "docker:mqtt-client:push-to-reg": "docker push 192.168.178.28:5000/mqtt-client:latest",
-    "docker:mqtt-client:publish:dev": "npm run docker:mqtt-client:build-for-armv7:dev && npm run docker:mqtt-client:push-to-reg",
-    "docker:mqtt-client:publish:prod": "npm run docker:mqtt-client:build-for-armv7:prod && npm run docker:mqtt-client:push-to-reg",
     "########### mqtt-broker ###########": "############################################################################################################",
     "start:mqtt-broker": "nx serve mqtt-broker",
     "build:mqtt-broker": "nx build mqtt-broker",
     "test:mqtt-broker": "nx test mqtt-broker",
     "docker:mqtt-broker": "docker build -t mqtt-broker -f apps/mqtt-broker/Dockerfile .",
     "ncc:mqtt-broker": "ncc build dist/apps/mqtt-broker/main.js -m -C -o dist/apps/mqtt-broker/vendor",
-    "docker:mqtt-broker:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-broker:latest -f ./apps/mqtt-broker/Dockerfile .",
-    "docker:mqtt-broker:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/mqtt-broker:latest -f ./apps/mqtt-broker/Dockerfile .",
-    "docker:mqtt-broker:push-to-reg": "docker push 192.168.178.28:5000/mqtt-broker:latest",
-    "docker:mqtt-broker:publish:dev": "npm run docker:mqtt-broker:build-for-armv7:dev && npm run docker:mqtt-broker:push-to-reg",
-    "docker:mqtt-broker:publish:prod": "npm run docker:mqtt-broker:build-for-armv7:prod && npm run docker:mqtt-broker:push-to-reg",
     "########### logger ###########": "############################################################################################################",
     "start:logger": "nx serve logger",
     "build:logger": "nx build logger",
     "test:logger": "nx test logger",
     "docker:logger": "docker build -t logger -f apps/logger/Dockerfile .",
     "ncc:logger": "ncc build dist/apps/logger/main.js -m -C -o dist/apps/logger/vendor",
-    "docker:logger:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/logger:latest -f ./apps/logger/Dockerfile .",
-    "docker:logger:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/logger:latest -f ./apps/logger/Dockerfile .",
-    "docker:logger:push-to-reg": "docker push 192.168.178.28:5000/logger:latest",
-    "docker:logger:publish:dev": "npm run docker:logger:build-for-armv7:dev && npm run docker:logger:push-to-reg",
-    "docker:logger:publish:prod": "npm run docker:logger:build-for-armv7:prod && npm run docker:logger:push-to-reg",
     "########### sensor-connector ###########": "############################################################################################################",
     "start:sensor-connector": "nx serve sensor-connector",
     "build:sensor-connector": "nx build sensor-connector",
     "test:sensor-connector": "nx test sensor-connector",
     "docker:sensor-connector": "docker build -t sensor-connector -f apps/sensor-connector/Dockerfile .",
     "ncc:sensor-connector": "ncc build dist/apps/sensor-connector/main.js -m -C -o dist/apps/sensor-connector/vendor",
-    "docker:sensor-connector:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/sensor-connector:latest -f ./apps/sensor-connector/Dockerfile .",
-    "docker:sensor-connector:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/sensor-connector:latest -f ./apps/sensor-connector/Dockerfile .",
-    "docker:sensor-connector:push-to-reg": "docker push 192.168.178.28:5000/sensor-connector:latest",
-    "docker:sensor-connector:publish:dev": "npm run docker:sensor-connector:build-for-armv7:dev && npm run docker:sensor-connector:push-to-reg",
-    "docker:sensor-connector:publish:prod": "npm run docker:sensor-connector:build-for-armv7:prod && npm run docker:sensor-connector:push-to-reg",
     "########### device-manager ###########": "############################################################################################################",
     "start:device-manager": "nx serve device-manager",
     "build:device-manager": "nx build device-manager",
     "test:device-manager": "nx test device-manager",
     "docker:device-manager": "docker build -t device-manager -f apps/device-manager/Dockerfile .",
     "ncc:device-manager": "ncc build dist/apps/device-manager/main.js -m -C -o dist/apps/device-manager/vendor",
-    "docker:device-manager:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/device-manager:latest -f ./apps/device-manager/Dockerfile .",
-    "docker:device-manager:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/device-manager:latest -f ./apps/device-manager/Dockerfile .",
-    "docker:device-manager:push-to-reg": "docker push 192.168.178.28:5000/device-manager:latest",
-    "docker:device-manager:publish:dev": "npm run docker:device-manager:build-for-armv7:dev && npm run docker:device-manager:push-to-reg",
-    "docker:device-manager:publish:prod": "npm run docker:device-manager:build-for-armv7:prod && npm run docker:device-manager:push-to-reg",
     "########### ota-server ###########": "############################################################################################################",
     "start:ota-server": "nx serve ota-server",
     "build:ota-server": "nx build ota-server",
     "test:ota-server": "nx test ota-server",
     "docker:ota-server": "docker build -t ota-server -f apps/ota-server/Dockerfile .",
     "ncc:ota-server": "ncc build dist/apps/ota-server/main.js -m -C -o dist/apps/ota-server/vendor",
-    "docker:ota-server:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/ota-server:latest -f ./apps/ota-server/Dockerfile .",
-    "docker:ota-server:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/ota-server:latest -f ./apps/ota-server/Dockerfile .",
-    "docker:ota-server:push-to-reg": "docker push 192.168.178.28:5000/ota-server:latest",
-    "docker:ota-server:publish:dev": "npm run docker:ota-server:build-for-armv7:dev && npm run docker:ota-server:push-to-reg",
-    "docker:ota-server:publish:prod": "npm run docker:ota-server:build-for-armv7:prod && npm run docker:ota-server:push-to-reg",
     "########### alexa-connector ###########": "############################################################################################################",
     "start:alexa-connector": "npm run create-env:alexa-connector && nx serve alexa-connector",
     "build:alexa-connector": "npm run create-env:alexa-connector && nx build alexa-connector",
@@ -99,32 +60,17 @@
     "create-env:alexa-connector": "node apps/alexa-connector/create-env.js",
     "docker:alexa-connector": "docker build -t alexa-connector -f apps/alexa-connector/Dockerfile .",
     "ncc:alexa-connector": "ncc build dist/apps/alexa-connector/main.js -m -C -o dist/apps/alexa-connector/vendor",
-    "docker:alexa-connector:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/alexa-connector:latest -f ./apps/alexa-connector/Dockerfile .",
-    "docker:alexa-connector:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/alexa-connector:latest -f ./apps/alexa-connector/Dockerfile .",
-    "docker:alexa-connector:push-to-reg": "docker push 192.168.178.28:5000/alexa-connector:latest",
-    "docker:alexa-connector:publish:dev": "npm run docker:alexa-connector:build-for-armv7:dev && npm run docker:alexa-connector:push-to-reg",
-    "docker:alexa-connector:publish:prod": "npm run docker:alexa-connector:build-for-armv7:prod && npm run docker:alexa-connector:push-to-reg",
     "########### adesso-commuter-server ###########": "############################################################################################################",
     "start:adesso-commuter-server": "nx serve adesso-commuter-server",
     "build:adesso-commuter-server": "nx build adesso-commuter-server",
     "test:adesso-commuter-server": "nx test adesso-commuter-server",
     "docker:adesso-commuter-server": "docker build -t adesso-commuter-server -f apps/adesso-commuter-server/Dockerfile .",
     "ncc:adesso-commuter-server": "ncc build dist/apps/adesso-commuter-server/main.js -m -C -o dist/apps/adesso-commuter-server/vendor",
-    "docker:adesso-commuter-server:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/adesso-commuter-server:latest -f ./apps/adesso-commuter-server/Dockerfile .",
-    "docker:adesso-commuter-server:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/adesso-commuter-server:latest -f ./apps/adesso-commuter-server/Dockerfile .",
-    "docker:adesso-commuter-server:push-to-reg": "docker push 192.168.178.28:5000/adesso-commuter-server:latest",
-    "docker:adesso-commuter-server:publish:dev": "npm run docker:adesso-commuter-server:build-for-armv7:dev && npm run docker:adesso-commuter-server:push-to-reg",
-    "docker:adesso-commuter-server:publish:prod": "npm run docker:adesso-commuter-server:build-for-armv7:prod && npm run docker:adesso-commuter-server:push-to-reg",
     "########### api-gateway ###########": "############################################################################################################",
     "start:api-gateway": "nx serve api-gateway",
     "build:api-gateway": "nx build api-gateway",
     "docker:api-gateway": "docker build -t api-gateway -f apps/api-gateway/Dockerfile .",
     "ncc:api-gateway": "ncc build dist/apps/api-gateway/main.js -m -C -o dist/apps/api-gateway/vendor",
-    "docker:api-gateway:build-for-armv7:dev": "docker buildx build --platform linux/arm/v7 -t 192.168.178.28:5000/api-gateway:latest -f ./apps/api-gateway/Dockerfile .",
-    "docker:api-gateway:build-for-armv7:prod": "docker buildx build --build-arg PRODUCTION=true --platform linux/arm/v7 -t 192.168.178.28:5000/api-gateway:latest -f ./apps/api-gateway/Dockerfile .",
-    "docker:api-gateway:push-to-reg": "docker push 192.168.178.28:5000/api-gateway:latest",
-    "docker:api-gateway:publish:dev": "npm run docker:api-gateway:build-for-armv7:dev && npm run docker:api-gateway:push-to-reg",
-    "docker:api-gateway:publish:prod": "npm run docker:api-gateway:build-for-armv7:prod && npm run docker:api-gateway:push-to-reg",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
