--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
     "@ngrx/component-store": "11.0.0",
+    "@ngxs/logger-plugin": "^3.7.2",
+    "@ngxs/store": "^3.7.2",
     "@nrwl/angular": "11.3.1",
     "@types/node": "12.12.38",
     "aedes": "^0.43.0",
@@ -155,6 +157,7 @@
     "@angular/language-service": "11.2.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@ngxs/devtools-plugin": "^3.7.2",
     "@nrwl/cli": "11.3.1",
     "@nrwl/express": "11.3.1",
     "@nrwl/jest": "11.3.1",
