--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,8 @@
       "@smart-home-conx/api/shared/data-access/models": [
         "libs/api/shared/data-access/models/src/index.ts"
       ],
-      "@smart-home-conx/influx": ["libs/influx/src/index.ts"]
+      "@smart-home-conx/influx": ["libs/influx/src/index.ts"],
+      "@smart-home-conx/preference": ["libs/preference/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
