--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,7 @@
     "alexa-connector": { "tags": [] },
     "ota-server": { "tags": [] },
     "api-shared-data-access-models": { "tags": [] },
-    "influx": { "tags": [] }
+    "influx": { "tags": [] },
+    "preference": { "tags": [] }
   }
 }
