--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
     "start": "run-p start:mqtt-client start:mqtt-broker",
     "docker:build:all:dev": "docker-compose -f docker-compose.dev.yml build",
@@ -91,16 +91,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.0",
-    "@angular/cdk": "^11.2.3",
-    "@angular/common": "11.2.0",
-    "@angular/compiler": "11.2.0",
-    "@angular/core": "11.2.0",
-    "@angular/forms": "11.2.0",
-    "@angular/material": "^11.2.3",
-    "@angular/platform-browser": "11.2.0",
-    "@angular/platform-browser-dynamic": "11.2.0",
-    "@angular/router": "11.2.0",
+    "@angular/animations": "12.0.0",
+    "@angular/cdk": "12.0.5",
+    "@angular/common": "12.0.0",
+    "@angular/compiler": "12.0.0",
+    "@angular/core": "12.0.0",
+    "@angular/forms": "12.0.0",
+    "@angular/material": "12.0.5",
+    "@angular/platform-browser": "12.0.0",
+    "@angular/platform-browser-dynamic": "12.0.0",
+    "@angular/router": "12.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/mapped-types": "^0.4.0",
@@ -109,11 +109,11 @@
     "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
-    "@ngrx/component-store": "11.0.0",
+    "@ngrx/component-store": "12.0.0",
     "@ngxs/logger-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
-    "@nrwl/angular": "11.3.1",
-    "@types/node": "12.12.38",
+    "@nrwl/angular": "12.4.0",
+    "@types/node": "14.14.33",
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
     "axios": "^0.21.1",
@@ -123,7 +123,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "detect-rpi": "^1.4.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-jwt": "^6.0.0",
     "fs-extra": "^9.0.1",
@@ -131,7 +131,7 @@
     "influx": "^5.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.5",
-    "ngx-mqtt": "8.0.1",
+    "ngx-mqtt": "^9.0.5",
     "node-telegram-bot-api": "^0.51.0",
     "octonode": "^0.10.0",
     "puppeteer": "^4.0.0",
@@ -148,35 +148,35 @@
     "typescript-ioc": "^3.2.2",
     "websocket-stream": "^5.5.2",
     "zip-lib": "^0.7.1",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.1",
-    "@angular/cli": "11.2.0",
-    "@angular/compiler-cli": "11.2.0",
-    "@angular/language-service": "11.2.0",
+    "@angular-devkit/build-angular": "12.0.0",
+    "@angular/cli": "12.0.0",
+    "@angular/compiler-cli": "12.0.0",
+    "@angular/language-service": "12.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@ngxs/devtools-plugin": "^3.7.2",
-    "@nrwl/cli": "11.3.1",
-    "@nrwl/express": "11.3.1",
-    "@nrwl/jest": "11.3.1",
-    "@nrwl/nest": "^11.5.1",
-    "@nrwl/node": "11.5.2",
-    "@nrwl/tao": "11.3.1",
-    "@nrwl/workspace": "11.3.1",
+    "@nrwl/cli": "12.4.0",
+    "@nrwl/express": "12.4.0",
+    "@nrwl/jest": "12.4.0",
+    "@nrwl/nest": "12.4.0",
+    "@nrwl/node": "12.4.0",
+    "@nrwl/tao": "12.4.0",
+    "@nrwl/workspace": "12.4.0",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/socket.io": "^2.1.11",
     "@vercel/ncc": "^0.25.1",
     "codelyzer": "6.0.0",
-    "eslint": "7.10.0",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.2",
+    "eslint": "7.22.0",
+    "jest": "27.0.3",
+    "jest-preset-angular": "9.0.3",
     "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "~4.0.3"
+    "typescript": "4.2.4"
   }
 }
