--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@nestjs/websockets": "^7.6.15",
     "@ngrx/component-store": "12.0.0",
     "@ngxs/logger-plugin": "^3.7.2",
+    "@ngxs/storage-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "@nrwl/angular": "12.4.0",
     "@types/node": "14.14.33",
