--- a/package.json
+++ b/package.json
@@ -60,6 +60,12 @@
     "create-env:alexa-connector": "node apps/alexa-connector/create-env.js",
     "docker:alexa-connector": "docker build -t alexa-connector -f apps/alexa-connector/Dockerfile .",
     "ncc:alexa-connector": "ncc build dist/apps/alexa-connector/main.js -m -C -o dist/apps/alexa-connector/vendor",
+    "########### commuting-watcher ###########": "############################################################################################################",
+    "start:commuting-watcher": "nx serve commuting-watcher",
+    "build:commuting-watcher": "nx build commuting-watcher",
+    "test:commuting-watcher": "nx test commuting-watcher",
+    "docker:commuting-watcher": "docker build -t commuting-watcher -f apps/commuting-watcher/Dockerfile .",
+    "ncc:commuting-watcher": "ncc build dist/apps/commuting-watcher/main.js -m -C -o dist/apps/commuting-watcher/vendor",
     "########### adesso-commuter-server ###########": "############################################################################################################",
     "start:adesso-commuter-server": "nx serve adesso-commuter-server",
     "build:adesso-commuter-server": "nx build adesso-commuter-server",
