--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@nestjs/microservices": "^7.6.14",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-socket.io": "^7.6.15",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
     "@ngrx/component-store": "12.0.0",
