--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "ngx-mqtt": "^9.0.5",
     "node-telegram-bot-api": "^0.51.0",
     "octonode": "^0.10.0",
-    "puppeteer": "^4.0.0",
+    "puppeteer": "8.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "semver": "^7.3.2",
