--- a/package.json
+++ b/package.json
@@ -91,30 +91,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.0.0",
-    "@angular/cdk": "12.0.5",
-    "@angular/common": "12.0.0",
-    "@angular/compiler": "12.0.0",
-    "@angular/core": "12.0.0",
-    "@angular/forms": "12.0.0",
-    "@angular/material": "12.0.5",
-    "@angular/platform-browser": "12.0.0",
-    "@angular/platform-browser-dynamic": "12.0.0",
-    "@angular/router": "12.0.0",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
+    "@angular/animations": "13.0.0",
+    "@angular/cdk": "13.0.0",
+    "@angular/common": "13.0.0",
+    "@angular/compiler": "13.0.0",
+    "@angular/core": "13.0.0",
+    "@angular/forms": "13.0.0",
+    "@angular/material": "13.0.0",
+    "@angular/platform-browser": "13.0.0",
+    "@angular/platform-browser-dynamic": "13.0.0",
+    "@angular/router": "13.0.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "^0.4.0",
     "@nestjs/microservices": "^7.6.14",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
-    "@ngrx/component-store": "12.0.0",
+    "@ngrx/component-store": "13.0.1",
     "@ngxs/logger-plugin": "^3.7.2",
     "@ngxs/storage-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
-    "@nrwl/angular": "12.4.0",
+    "@nrwl/angular": "13.2.3",
     "@types/node": "14.14.33",
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
@@ -124,7 +124,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "detect-rpi": "^1.4.0",
-    "dotenv": "8.2.0",
+    "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-jwt": "^6.0.0",
     "fs-extra": "^9.0.1",
@@ -133,12 +133,13 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.5",
     "ngx-mqtt": "^9.0.5",
-    "ngx-sub-form": "^5.1.2",
+    "ngx-observable-lifecycle": "^2.2.0",
+    "ngx-sub-form": "^6.0.0-feat-rewrite.17",
     "node-telegram-bot-api": "^0.51.0",
     "octonode": "^0.10.0",
     "puppeteer": "8.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.5.5",
+    "rxjs": "^7.0.0",
     "semver": "^7.3.2",
     "simple-git": "^2.23.0",
     "socket.io": "^3.0.1",
@@ -148,35 +149,35 @@
     "typeorm": "^0.2.31",
     "websocket-stream": "^5.5.2",
     "zip-lib": "^0.7.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.0.0",
-    "@angular/cli": "12.0.0",
-    "@angular/compiler-cli": "12.0.0",
-    "@angular/language-service": "12.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@angular-devkit/build-angular": "13.0.4",
+    "@angular/cli": "13.0.4",
+    "@angular/compiler-cli": "13.0.0",
+    "@angular/language-service": "13.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@ngxs/devtools-plugin": "^3.7.2",
-    "@nrwl/cli": "12.4.0",
-    "@nrwl/express": "12.4.0",
-    "@nrwl/jest": "12.4.0",
-    "@nrwl/nest": "12.4.0",
-    "@nrwl/node": "12.4.0",
-    "@nrwl/tao": "12.4.0",
-    "@nrwl/workspace": "12.4.0",
+    "@nrwl/cli": "13.2.3",
+    "@nrwl/express": "13.2.3",
+    "@nrwl/jest": "13.2.3",
+    "@nrwl/nest": "13.2.3",
+    "@nrwl/node": "13.2.3",
+    "@nrwl/tao": "13.2.3",
+    "@nrwl/workspace": "13.2.3",
     "@types/express": "4.17.0",
-    "@types/jest": "26.0.8",
+    "@types/jest": "27.0.2",
     "@types/socket.io": "^2.1.11",
     "@vercel/ncc": "^0.25.1",
     "codelyzer": "6.0.0",
     "eslint": "7.22.0",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.3",
-    "prettier": "2.2.1",
-    "ts-jest": "27.0.3",
+    "jest": "27.2.3",
+    "jest-preset-angular": "11.0.0",
+    "prettier": "2.3.1",
+    "ts-jest": "27.0.5",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.2.4"
+    "typescript": "4.4.4"
   }
 }
